Added footer, MeCurer logo to nav bar

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>MeCurer</title>
+
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import Google Font-->
+    <link href="http://fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <!--Import style.css-->
     <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
 
@@ -18,6 +22,9 @@
       <!-- Add the class fixed to have the sideNav be fixed and open on large screens and hides to the regular functionality on smaller screens -->
       <!-- Add the class side-nav to style as side nav -->
       <ul id="slide-out-nav" class="side-nav fixed">
+        <a href="#" class="brand-logo" id="logo">
+          MeCurer
+        </a>
         <li><a href="#!">First Sidebar Link</a></li>
         <li><a href="#!">Second Sidebar Link</a></li>
         <li class="no-padding"> <!-- must add class no-padding to things with class .menu-item-has-children -->
@@ -38,7 +45,7 @@
         <li class="no-padding">
           <ul class="collapsible collapsible-accordion">
             <li>
-              <a class="collapsible-header">Category w/ more options</a>
+              <a class="collapsible-header">Another Category</a>
               <div class="collapsible-body">
                 <ul>
                   <li><a href="#!">First</a></li>
@@ -54,21 +61,57 @@
 
     <header>
       <nav>
-        <a href="#" data-activates="slide-out-nav" class="button-collapse"><i class="material-icons">menu</i></i></a>
+        <a href="#" data-activates="slide-out-nav" class="button-collapse"><i class="material-icons">menu</i></a>
         <div class="container page-title"> Page Name </div>
       </nav>
     </header>
 
     <main>
       <div class="container">
-        Main
+        <h2> Title </h2>
+        <h5> Details </h5>
+        <p> Description...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus nulla pretium dapibus iaculis. Pellentesque mollis purus massa, et pretium turpis efficitur tempus. Sed et pharetra mi, vitae suscipit dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae aliquet augue. Nulla id lorem viverra, sollicitudin diam eu, blandit augue. Phasellus ultricies sed neque sit amet fringilla. Cras sed pulvinar libero. Nullam facilisis enim condimentum mi consequat, eu efficitur sem tincidunt. Sed at aliquam risus. Nulla fringilla odio a ipsum posuere luctus.
+        </p>
+
+        <hr>
+
+        <h2> Title </h2>
+        <h5> Details </h5>
+        <p> Description...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus nulla pretium dapibus iaculis. Pellentesque mollis purus massa, et pretium turpis efficitur tempus. Sed et pharetra mi, vitae suscipit dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae aliquet augue. Nulla id lorem viverra, sollicitudin diam eu, blandit augue. Phasellus ultricies sed neque sit amet fringilla. Cras sed pulvinar libero. Nullam facilisis enim condimentum mi consequat, eu efficitur sem tincidunt. Sed at aliquam risus. Nulla fringilla odio a ipsum posuere luctus.
+        </p>
+
+        <hr>
+
+        <h2> Title </h2>
+        <h5> Details </h5>
+        <p> Description...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus nulla pretium dapibus iaculis. Pellentesque mollis purus massa, et pretium turpis efficitur tempus. Sed et pharetra mi, vitae suscipit dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae aliquet augue. Nulla id lorem viverra, sollicitudin diam eu, blandit augue. Phasellus ultricies sed neque sit amet fringilla. Cras sed pulvinar libero. Nullam facilisis enim condimentum mi consequat, eu efficitur sem tincidunt. Sed at aliquam risus. Nulla fringilla odio a ipsum posuere luctus.
+        </p>
       </div>
     </main>
-    <footer>
-      <div class="container">
-        Foot
-      </div>
-    </footer>
+    <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            Copyright Text
+            </div>
+          </div>
+        </footer>
 
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
